--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "تقسيم الكهرباء",
   "short_name": "تقسيم الكهرباء",
   "description": "قسّم فواتير الكهرباء بين العقارات المؤجرة بسهولة",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#0d0d0d",
   "theme_color": "#1a1a1a",
