Switch to light theme and remove gradient background

--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "قسّم فواتير الكهرباء بين العقارات المؤجرة بسهولة",
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#0d0d0d",
-  "theme_color": "#1a1a1a",
+  "background_color": "#ffffff",
+  "theme_color": "#2563eb",
   "orientation": "portrait",
   "dir": "rtl",
   "lang": "ar",
